[gd_scene load_steps=15 format=3 uid="uid://cid6qokd0pwe3"]

[ext_resource type="Script" uid="uid://b0cnpk0ymgsu6" path="res://Navigation/game_controller.gd" id="1_3iy47"]
[ext_resource type="PackedScene" uid="uid://gct2ttl1x15w" path="res://Navigation/title.tscn" id="2_alenl"]
[ext_resource type="Script" uid="uid://c4lugabwq1kw0" path="res://advanced_stats.gd" id="3_04mc1"]
[ext_resource type="PackedScene" uid="uid://dhkf2waclclh" path="res://Navigation/transition_controller.tscn" id="3_alenl"]
[ext_resource type="LabelSettings" uid="uid://dpmgf7egj0x4s" path="res://UI/advanced_label.tres" id="3_rrpbx"]
[ext_resource type="PackedScene" uid="uid://53o2s6enb05h" path="res://shader_layer.tscn" id="4_bqgkb"]
[ext_resource type="AudioStream" uid="uid://dj5l0o0fcbsyp" path="res://Audio/InTheLoopTheme.wav" id="5_cp2b6"]
[ext_resource type="Theme" uid="uid://cs11afo5dvmke" path="res://UI/button_theme.tres" id="5_ntsfb"]
[ext_resource type="Script" uid="uid://dcersbxet1mqd" path="res://audio_controller.gd" id="6_osaii"]
[ext_resource type="LabelSettings" uid="uid://lvc75807blu1" path="res://UI/header_label.tres" id="6_sk3y1"]

[sub_resource type="Animation" id="Animation_osaii"]
resource_name = "BGMusic Fade In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, -6.0]
}

[sub_resource type="Animation" id="Animation_04mc1"]
resource_name = "Quiet"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-20.0]
}

[sub_resource type="Animation" id="Animation_rrpbx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_04mc1"]
_data = {
&"BGMusic Fade In": SubResource("Animation_osaii"),
&"Quiet": SubResource("Animation_04mc1"),
&"RESET": SubResource("Animation_rrpbx")
}

[node name="GameController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3iy47")

[node name="World" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" parent="World" instance=ExtResource("2_alenl")]
layout_mode = 1

[node name="AdvancedStats" type="Control" parent="World"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_04mc1")

[node name="InLevelStats" type="VBoxContainer" parent="World/AdvancedStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 23.0
offset_right = -26.0
offset_bottom = 117.0
grow_horizontal = 0

[node name="SpeedrunTimer" type="Label" parent="World/AdvancedStats/InLevelStats"]
layout_mode = 2
text = "XX:XX.XXX"
label_settings = ExtResource("3_rrpbx")
horizontal_alignment = 2

[node name="ParCount" type="Label" parent="World/AdvancedStats/InLevelStats"]
layout_mode = 2
text = "Par: X"
label_settings = ExtResource("3_rrpbx")
horizontal_alignment = 2

[node name="TotalStats" type="VBoxContainer" parent="World/AdvancedStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 23.0
offset_right = -26.0
offset_bottom = 117.0
grow_horizontal = 0

[node name="TotalTimer" type="Label" parent="World/AdvancedStats/TotalStats"]
layout_mode = 2
text = "Total: 00:00.00"
label_settings = ExtResource("3_rrpbx")
horizontal_alignment = 2

[node name="TotalHits" type="Label" parent="World/AdvancedStats/TotalStats"]
layout_mode = 2
text = "Hits: 0"
label_settings = ExtResource("3_rrpbx")
horizontal_alignment = 2

[node name="Victory Screen" type="Control" parent="World"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="World/Victory Screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.394
anchor_top = 0.437
anchor_right = 0.606
anchor_bottom = 0.563
offset_left = 0.111969
offset_top = 46.824
offset_right = -0.112
offset_bottom = 47.176
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_ntsfb")
text = "Continue"

[node name="Label" type="Label" parent="World/Victory Screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.245
anchor_top = 0.424
anchor_right = 0.755
anchor_bottom = 0.576
offset_left = -0.23999
offset_top = -51.752
offset_right = 0.239929
offset_bottom = -51.248
grow_horizontal = 2
grow_vertical = 2
text = "Secret Delivered!"
label_settings = ExtResource("6_sk3y1")
horizontal_alignment = 1

[node name="TransitionController" parent="." instance=ExtResource("3_alenl")]
layout_mode = 1

[node name="ShaderLayer" parent="." instance=ExtResource("4_bqgkb")]

[node name="AudioController" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cp2b6")
volume_db = -6.0
autoplay = true
script = ExtResource("6_osaii")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioController"]
libraries = {
&"": SubResource("AnimationLibrary_04mc1")
}

[connection signal="scene_changed" from="." to="World/AdvancedStats" method="_on_scene_changed"]
[connection signal="pressed" from="World/Victory Screen/Button" to="." method="change_scene" binds= ["res://Navigation/level_select.tscn"]]
